Add navigation to html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Theodore's - Awesome Books ES6</title>
   </head>
   <body>
+    <header>
+      <nav class="container-nav-menu">
+        <div class="logo">Awesome Books</div>
+        <ul class="menu__items">
+          <li class="menu__items-item">List</li>
+          <li class="menu__items-item">Add New</li>
+          <li class="menu__items-item">Contact</li>
+        </ul>
+      </nav>
+    </header>
     <script src="./index.js"></script>
   </body>
 </html>
