Add form,contact and book list to html file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,56 @@
         </ul>
       </nav>
     </header>
+
+    <main class="width-height">
+      <section class="list-list">
+        <h1 class="head">All awesome books</h1>
+        <div class="container"></div>
+      </section>
+
+      <section class="add-form">
+        <h2 class="head">Add new books</h2>
+        <form class="form">
+          <input
+            class="title"
+            type="text"
+            name="title"
+            id="title"
+            placeholder="Title"
+          />
+          <br />
+          <br />
+          <input
+            class="author"
+            type="text"
+            name="author"
+            id="author"
+            placeholder="Author"
+          />
+          <br />
+          <br />
+          <button class="btnSubmit" type="submit">Add</button>
+          <br />
+          <br />
+          <span></span>
+        </form>
+      </section>
+
+      <section class="contact-info">
+        <h2 class="head">Contact Information</h2>
+        <p class="contact-details">
+          Do you have any questions or just want to say "Hello"?
+          <br />
+          You can reach out to us!
+        </p>
+        <ul>
+          <li>Our email: mail@mail.com</li>
+          <li>Our phone number: 0025469875425</li>
+          <li>Our address: First St SE in Washington, DC 20004</li>
+        </ul>
+      </section>
+    </main>
+
     <script src="./index.js"></script>
   </body>
 </html>
