Add footer to project

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         </ul>
       </section>
     </main>
+    <footer class="footer">Copyright &copy; 2023</footer>
 
     <script src="./index.js"></script>
   </body>
