--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
     </main>
     <footer class="footer">Copyright &copy; 2023</footer>
 
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
