--- a/index.html
+++ b/index.html
@@ -14,5 +14,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.js"></script>
     <title>Theodore's Bookshop</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="container-nav-menu">
+        <div class="logo">Awesome Books</div>
+        <ul class="menu__items">
+          <li class="menu__items-item">List</li>
+          <li class="menu__items-item">Add New</li>
+          <li class="menu__items-item">Contact</li>
+        </ul>
+      </nav>
+    </header>
+    <p class="ourLocalDate"></p>
+  </body>
 </html>
