Add main content to html

--- a/index.html
+++ b/index.html
@@ -26,5 +26,48 @@
       </nav>
     </header>
     <p class="ourLocalDate"></p>
+
+    <main class="width-height">
+      <section class="list-list">
+        <h1 class="head">All awesome books</h1>
+        <section class="all"></section>
+      </section>
+      <section class="contact-info">
+        <h2 class="head">Contact Information</h2>
+        <p class="contact-details">
+          Do you have any questions or just want to say "Hello"?
+          <br />
+          You can reach out to us!
+        </p>
+        <ul>
+          <li>Our email: mail@mail.com</li>
+          <li>Our phone number: 0025469875425</li>
+          <li>Our address: First St SE in Washington, DC 20004</li>
+        </ul>
+      </section>
+      <section class="add-form">
+      <form action="" class="formReset">
+        <h2>Add a new</span>book</h2>
+        <input
+          type="text"
+          id="title"
+          placeholder="Title"
+          class="boundry_line"
+          required
+        />
+        <br />
+        <input
+          type="text"
+          id="author"
+          placeholder="Author"
+          class="boundry_line"
+          required
+        />
+        <br />
+        <button type="button" class="btnSubmit">Add</button>
+        <p class="errMessage"></p>
+      </form>
+    </section>
+    </main>
   </body>
 </html>
