--- a/index.html
+++ b/index.html
@@ -72,5 +72,6 @@
     <footer>
       <p>Theodore &copy; 2023</p>
     </footer>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
