Update html file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
     </header>
-    <p class="ourLocalDate"></p>
+    <p class="localDateTime"></p>
 
     <main class="width-height">
       <section class="list-list">
